--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "nodejs",
-  "version": "1.0.0",
+  "name": "@evamel/holidays",
+  "version": "1.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "bin/index.js",
+  "type": "module",
+  "bin": {
+    "hello": "./bin/index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +22,11 @@
   "homepage": "https://github.com/Evamel/nodeJS#readme",
   "dependencies": {
     "axios": "^0.22.0",
-    "country-list": "^2.2.0"
+    "boxen": "^6.2.1",
+    "chalk": "^2.4.2",
+    "country-list": "^2.2.0",
+    "figlet": "^1.5.2",
+    "ora": "^6.0.1",
+    "validator": "^13.6.0"
   }
 }
